--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -279,11 +279,11 @@ pre code {
 
 .highlight pre {
   background-color: #f8f8f8;
-  border: 1px solid #cccccc;
+  border: 0px solid #cccccc;
   font-size: 13px;
   line-height: 19px;
   overflow: auto;
-  padding: 6px 10px;
+  padding: 0px;
   border-radius: 3px;
 }
 
