--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,7 +34,14 @@
 
     <link rel="stylesheet" href="/highlight/styles/rainbow.css">
     <script src="/highlight/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+<script>
+$(document).ready(function() {
+  $('pre code').each(function(i, block) {
+    block.className = 'fs';
+    hljs.highlightBlock(block);
+  });
+});
+</script>
   </head>
 
   <body>
