--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,8 +32,10 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link rel="stylesheet" href="/highlight/styles/rainbow.css">
     <script src="/highlight/highlight.pack.js"></script>
+
 <script>
 $(document).ready(function() {
   $('pre code').each(function(i, block) {
